crates/nx-syntax/tests/fixtures/valid/import-wildcard.nx
import "./ui/controls.nx"

<App />
