crates/nx-syntax/tests/fixtures/invalid/contenttype-after-import.nx
import "./ui/controls.nx"
contenttype "./schemas/html5"

<App />
